# apis

./: .gitignore  Cargo.toml  MakefileDot  MakefileMd  README  README.md  TODO  graph-dependencies.sh  run-examples.sh  run-interactive.sh  run-tests.sh  run.sh  rust-toolchain  shell.nix  test.sh
.githooks/: pre-push
.github/workflows/: ci.yml
doc/: DESIGN  apis.xcf
examples/: disconnect-receiver-sink.rs  disconnect-receiver-source.rs  disconnect-sender-sink.rs  disconnect-sender-source.rs  disconnect-sink.rs  disconnect-source.rs  graphical.rs  interactive.rs  program.rs  readme.rs  simplex.rs  sink.rs  source.rs
mock/: Cargo.toml
mock/src/: lib.rs
src/: example.rs  lib.rs  message.rs
src/channel/: mod.rs
src/channel/backend/: buffer.rs  mod.rs
src/process/: inner.rs  mod.rs  presult.rs
src/program/: macro_def.rs  mod.rs
src/session/: macro_def.rs  mod.rs
