[package]
name = "apis"
version = "0.5.10"
authors = ["Shane Pearman <spearman@github.com>"]
license = "MPL-2.0"
description = "Reactive, session-oriented, asynchronous process-calculus framework"
repository = "https://github.com/spearman/apis"
readme = "README.md"
edition = "2021"

[lib]
name = "apis"

[dependencies]
colored = "2.*"
either = "1.*"
log = { version = "0.4.*", features = ["kv"] }
marksman_escape = "0.1.*"
smallvec = "1.*"
strum = { version = "0.26.*", features = ["derive"] }
vec_map = "0.8.*"

# local dependencies
macro-machines = "0.10.*"
unbounded-spsc = { version = "0.1.*", git = "https://github.com/spearman/unbounded-spsc.git" }

# dev dependencies
[dev-dependencies]
glium = "0.31.*"
rand = "0.8.*"
env_logger = { version = "0.11.*", features = ["unstable-kv"] }

[features]
# The reason we do this is because doctests don't get cfg(test) See:
# https://github.com/rust-lang/rust/issues/45599
test = []
