[package]
name = "apis"
version = "0.5.12"
authors = ["Shane Pearman <spearman@github.com>"]
license = "MPL-2.0"
description = "Reactive, session-oriented, asynchronous process-calculus framework"
repository = "https://github.com/spearman/apis"
readme = "README.md"
edition = "2024"

[lib]
name = "apis"

[dependencies]
colored = "3.*"
either = "1.*"
log = { version = "0.4.*", features = ["kv"] }
macro-machines = "0.10.*"
marksman_escape = "0.1.*"
smallvec = "1.*"
strum = { version = "0.27.*", features = ["derive"] }
unbounded-spsc = "0.1.*"
vec_map = "0.8.*"


# dev dependencies
[dev-dependencies]
glium = "0.31.*"
rand = "0.9.*"
env_logger = { version = "0.11.*", features = ["kv"] }

[features]
# The reason we do this is because doctests don't get cfg(test) See:
# https://github.com/rust-lang/rust/issues/45599
test = []

[lints.clippy]
empty-line-after-doc-comments = "allow"
